# Quadcopter

./: .gitignore  DEPLOYMENT.md  QUICK_START.md  Quadcopter_ms.py  Quadcopter_ss.py  README.md  install_gazebo_harmonic.sh  install_ros2_humble.sh  requirements.txt  run_mavros2_motor_test.sh  setup_rpi.sh  sim.sh  start_mavros2.sh  stop_mavros2.sh
algorithms/nmpc/active_subspace/: multiple_shooting_active_subspace.py  single_shooting_active_subspace.py
assets/: README.md
assets/CAD_Files/: ESC v2.step  LiPO Battery v2.step  M4 x 0.7mm Thread 16mm LONG SOCKET HEAD CAP SCREW.STEP  Propeller - 10x4.5L v1.step  Servo v1.step  flat_washer_M3x9.step  hexagonal_nut_normal_height_M3.step  pixhawk v9.step
docker/: Dockerfile  README.md  docker-compose.yml
hardware/: README.md
hardware/3d_models/: README.md
hardware/cad_models/: Anti-vibration platform for Pixhawk and APM.stp  Landing Gear v2.step  Spacer M2 F F 20mm.stp  Spacer M2 F F 5mm.stp  camera_holder.STEP  pixhaw_top_mounting.STEP
ros2_src/drone_control/: CMakeLists.txt
ros2_src/drone_control/src/: motor_test_mavros2.cpp
src/: pose_republisher.py  simple_pose_pub.py  tf_publisher.py
src/drone_control/: CMakeLists.txt  package.xml
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: f450_motor_test.launch.py  f450_sitl.launch.py  rviz_visualization.launch.py
src/simulation/models/f450_drone/: model.config  model.sdf
src/simulation/rviz/: drone_visualization.rviz  simple_drone_viz.rviz  test_pose.rviz
src/simulation/urdf/: f450_drone.urdf
src/simulation/worlds/: f450_empty.world.erb  f450_grass.world  f450_indoor.world
